# radix-relay

./: .clang-tidy  .gitignore  .gitmodules  404.html  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  Dependencies.cmake  Doxyfile  ProjectOptions.cmake  README.md  README_building.md  README_dependencies.md  README_docker.md  check_rust.cmake  index.html  lsan.supp  mkdocs.yml  requirements.txt  rustfmt.toml  sitemap.xml  vcpkg.json
.cargo/: config.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/: constants.env
.github/workflows/: ci.yml  codeql-analysis.yml  docs.yml
api/: index.html
api/cpp/: annotated.html  annotated_dup.js  app__init_8hpp.html  app__init_8hpp.js  app__init_8hpp_source.html  async__queue_8hpp.html  async__queue_8hpp.js  async__queue_8hpp_source.html  ble__stream_8hpp.html  ble__stream_8hpp.js  ble__stream_8hpp_source.html  (+559 more)
api/cpp-api/: index.html
architecture/: index.html
benchmarks/: CMakeLists.txt  signal_bridge_benchmark.cpp
cmake/: Cache.cmake  CompilerWarnings.cmake  Cuda.cmake  Documentation.cmake  Doxygen.cmake  Hardening.cmake  HeaderValidation.cmake  InterproceduralOptimization.cmake  LibFuzzer.cmake  Linker.cmake  PackageProject.cmake  PreventInSourceBuilds.cmake  Quality.cmake  RustIntegration.cmake  RustQualityChecks.cmake  Sanitizers.cmake  StaticAnalyzers.cmake  Tests.cmake
configured_files/: config.hpp.in
developer/: index.html
doc/: README.md  signal_bridge_architecture.puml
docs/: index.md
fuzz_test/: CMakeLists.txt  fuzz_event_handler.cpp  fuzz_tester.cpp
getting-started/: index.html
lib/core/: CMakeLists.txt
lib/core/include/async/: async_queue.hpp
lib/core/include/cli_utils/: app_init.hpp  cli_parser.hpp  tui_sink.hpp
lib/core/include/concepts/: command_handler.hpp  event_handler.hpp  signal_bridge.hpp  transport_stream.hpp
lib/core/include/core/: cli.hpp  command_handler.hpp  command_parser.hpp  command_processor.hpp  connection_monitor.hpp  connection_monitor_processor.hpp  contact_info.hpp  default_printer.hpp  display_filter.hpp  event_handler.hpp  events.hpp  overload.hpp  presentation_handler.hpp  presentation_processor.hpp  processor_runner.hpp  semver_utils.hpp  signal_types.hpp  standard_event_handler.hpp  standard_processor.hpp  transport_event_display_handler.hpp  transport_event_processor.hpp  uuid_generator.hpp
lib/core/src/: connection_monitor.cpp  uuid_generator.cpp
lib/nostr/: CMakeLists.txt
lib/nostr/include/concepts/: request_tracker.hpp  websocket_stream.hpp
lib/nostr/include/nostr/: events.hpp  message_handler.hpp  protocol.hpp  request_tracker.hpp  semver_utils.hpp  session_orchestrator.hpp  transport.hpp
lib/nostr/src/: events.cpp  protocol.cpp
lib/platform/: CMakeLists.txt
lib/platform/include/platform/: env_utils.hpp  time_utils.hpp
lib/platform/src/: env_utils.cpp  time_utils.cpp
lib/signal/: CMakeLists.txt
lib/signal/include/signal/: node_identity.hpp  signal_bridge.hpp  types.hpp
lib/signal/src/: node_identity.cpp  signal_bridge.cpp
lib/signal_types/: CMakeLists.txt
lib/slint_ui/: CMakeLists.txt
lib/slint_ui/include/slint_ui/: processor.hpp
lib/slint_ui/src/: processor.cpp
lib/slint_ui/ui/: main_window.slint
lib/transport/: CMakeLists.txt
lib/transport/include/transport/: ble_stream.hpp  websocket_stream.hpp
lib/transport/src/: ble_stream.cpp  websocket_stream.cpp
lib/tui/: CMakeLists.txt
lib/tui/include/tui/: processor.hpp
rust/: Cargo.toml  Cargo.toml.in
rust/signal_bridge/: Cargo.toml  build.rs
rust/signal_bridge/src/: contact_manager.rs  db_encryption.rs  encryption.rs  encryption_trait.rs  key_rotation.rs  keys.rs  lib.rs  memory_storage.rs  message_history.rs  message_history_tests.rs  nostr_identity.rs  session.rs  session_trait.rs  sqlcipher_tests.rs  sqlite_storage.rs  storage.rs  storage_trait.rs
scripts/: build-docs.sh
search/: search_index.json
security/: index.html
src/: CMakeLists.txt  echo_demo.cpp  echo_demo_strand.cpp  radix_relay.cpp  slint_demo.cpp
src/ftxui_sample/: CMakeLists.txt  main.cpp
src/radix_relay/: CMakeLists.txt  main.cpp  nostr_transport.cpp
src/radix_relay/core/: CMakeLists.txt
src/radix_relay/nostr/: CMakeLists.txt  events.cpp  protocol.cpp
src/radix_relay/platform/: CMakeLists.txt  env_utils.cpp
src/radix_relay/signal/: CMakeLists.txt  node_identity.cpp  signal_bridge.cpp
src/radix_relay/transport/: CMakeLists.txt  beast_websocket_stream.cpp  uuid_generator.cpp
src/radix_relay/tui/: CMakeLists.txt  processor.cpp
src/radix_relay_core/: CMakeLists.txt  cli.cpp
src/sample_library/: CMakeLists.txt  sample_library.cpp
stylesheets/: doxygen-custom.css  extra.css
test/: CMakeLists.txt  async_queue_tests.cpp  beast_websocket_integration_test.cpp  ble_stream_tests.cpp  cli_parser_integration_tests.cpp  cli_tests.cpp  cli_utils_tests.cpp  command_handler_tests.cpp  command_parser_tests.cpp  command_processor_tests.cpp  connection_monitor_tests.cpp  constexpr_tests.cpp  coroutine_lifecycle_tests.cpp  display_filter_tests.cpp  event_handler_tests.cpp  event_system_tests.cpp  gui_contact_list_tests.cpp  gui_processor_tests.cpp  main_cli_tests.cmake  node_identity_tests.cpp  nostr_handler_tests.cpp  nostr_message_handler_tests.cpp  nostr_protocol_tests.cpp  nostr_request_tracker_tests.cpp  nostr_signing_tests.cpp  nostr_transport_event_driven_tests.cpp  nostr_transport_tests.cpp  platform_time_utils_tests.cpp  presentation_handler_tests.cpp  presentation_processor_tests.cpp  raw_signal_bridge_tests.cpp  rust_bridge_tests.cpp  scroll_state_tests.cpp  semver_utils_tests.cpp  session_orchestrator_tests.cpp  signal_bridge_tests.cpp  simpleble_bluez_integration_test.cpp  slint_ui_processor_tests.cpp  standard_processor_tests.cpp  tests.cpp  (+3 more)
test/test_doubles/: test_double_ble_stream.hpp  test_double_command_handler.hpp  test_double_event_handler.hpp  test_double_nostr_handler.hpp  test_double_nostr_transport.hpp  test_double_printer.hpp  test_double_request_tracker.hpp  test_double_signal_bridge.hpp  test_double_standard_handler.hpp  test_double_websocket_stream.hpp
(+487 files in other folders)
