[package]
name = "signal_bridge"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib"]

[dependencies]
# Core libsignal dependencies - using git dependency to avoid linting third-party code
libsignal-protocol = { git = "https://github.com/signalapp/libsignal.git", tag = "v0.80.0" }

# Use workspace rand version (aligned with libsignal 0.9.2)
rand = { workspace = true }

# Test dependencies
tokio = { version = "1.0", features = ["rt", "rt-multi-thread", "macros", "sync"] }

# Async trait support
async-trait = "0.1"

# SQLite database support
rusqlite = { version = "0.32", features = ["bundled", "chrono"] }

# Serialization support
bincode = "1.3"
serde = { version = "1.0", features = ["derive"] }

# Error handling
thiserror = "1.0"
