[package]
name = "signal_bridge"
version.workspace = true
edition = "2021"

[lib]
crate-type = ["staticlib"]

[dependencies]
# Core libsignal dependencies - using git dependency to avoid linting third-party code
libsignal-protocol = { git = "https://github.com/signalapp/libsignal.git", tag = "v0.80.0" }

# Use workspace rand version (aligned with libsignal 0.9.2)
rand = { workspace = true }

# Test dependencies
tokio = { version = "1.0", features = ["rt", "rt-multi-thread", "macros", "sync"] }

# Async trait support
async-trait = "0.1"

# SQLite database support with SQLCipher encryption
# Windows: Use bundled-sqlcipher with vcpkg-provided OpenSSL (avoids MSVC runtime conflicts)
# Other platforms: Use bundled-sqlcipher-vendored-openssl (build everything from source)
rusqlite = { version = "0.32", features = ["chrono"] }

# Serialization support
bincode = "1.3"
serde = { version = "1.0", features = ["derive"] }

# Error handling
thiserror = "1.0"

# CXX bridge for C++ integration
cxx = "1.0"

# Cryptographic hashing
sha2 = "0.10"

# HKDF for key derivation
hkdf = "0.12"

# Nostr protocol implementation
nostr = "0.35"

# JSON support
serde_json = "1.0"

# Hex encoding/decoding
hex = "0.4"

# Base64 encoding/decoding
base64 = "0.22"

# Platform-specific dependencies
[target.'cfg(target_os = "linux")'.dependencies]
secret-service = { version = "4.0", features = ["rt-tokio-crypto-rust"] }
# Linux: Build SQLCipher from source, link to system OpenSSL
rusqlite = { version = "0.32", features = ["bundled-sqlcipher"] }

[target.'cfg(target_os = "macos")'.dependencies]
security-framework = "2.11"
# macOS: Build SQLCipher from source, link to system OpenSSL
rusqlite = { version = "0.32", features = ["bundled-sqlcipher"] }

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_Security_Cryptography"] }
# Windows: Use bundled SQLCipher with vcpkg OpenSSL (avoids /MT vs /MD runtime conflicts)
rusqlite = { version = "0.32", features = ["bundled-sqlcipher"] }

[build-dependencies]
cxx-build = "1.0"
